--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <p>這是一段只屬於妳的聲音，希望妳每天都能感受到我的陪伴。</p>
 
   <audio autoplay controls>
-    <source src="https://www.dropbox.com/s/mxpdg2xoc9qz1kcagp4me/1.A-Whole-New-World.mp3?rlkey=qv2j30xbcl0xhpq46f70h21d1&st=dnai4cij&raw=1" type="audio/mpeg">
+    <source src="LoveSong.mp3" type="audio/mpeg">
     您的瀏覽器不支援音訊播放。
   </audio>
 </body>
