--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <title>送給妳的小禮物 💌</title>
   <style>
     body {
+      font-size: 33px;
       background-color: #fff5f8;
       font-family: "微軟正黑體", sans-serif;
       text-align: center;
@@ -42,6 +43,7 @@
 
   <h1>給我最愛的妳 ❤️</h1>
   <p>這是一段只屬於妳的聲音，希望妳每天都能感受到我的陪伴。</p>
+  <p>👇 點一下播放</p>
 
   <audio autoplay controls>
     <source src="LoveSong.mp3" type="audio/mpeg">
