--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
     }
 
     audio {
-      margin-top: 30px;
+      margin-top: 40px;
+      width: 300px; /* 播放器寬度 */
+      height: 60px;  /* 控制區高度 */
+      transform: scale(1.5); /* 放大整個播放器（含播放鍵） */
     }
 
     .bg {
@@ -32,7 +35,7 @@
       width: 100%;
       height: 100%;
       z-index: -1;
-      background-image: url('你的背景圖網址.jpg'); /* ← 可換成你自己的背景圖網址 */
+      background-image: url('你的背景圖網址.jpg');
       background-size: cover;
       opacity: 0.15;
     }
@@ -43,28 +46,21 @@
 
   <h1>給我最愛的妳 ❤️</h1>
   <p>這是一段只屬於妳的聲音，希望妳每天都能感受到我的陪伴。</p>
-  <p>👇 點一下播放</p>
+  <p>👇 點擊下方播放 🎵</p>
 
-  <audio id="player" controls autoplay>
-    您的瀏覽器不支援音訊播放。
-  </audio>
+  <audio id="player" controls></audio>
 
   <script>
-    // 📀 將這裡改成你實際上傳的 mp3 檔名
     const tracks = [
       "love1.mp3",
       "love2.mp3",
       "love3.mp3"
     ];
 
-    // 🎲 隨機挑選一首
+    // 頁面載入後，隨機挑選一首歌，但不自動播放
     const randomTrack = tracks[Math.floor(Math.random() * tracks.length)];
-
-    // 🎵 設定 audio 播放器來源
     const player = document.getElementById("player");
     player.src = randomTrack;
-    player.load();
-    player.play();
   </script>
 </body>
 </html>
