--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
 
   <script>
     const tracks = [
-      "love1.mp3",
-      "love2.mp3",
-      "love3.mp3"
+      "Love1.mp3",
+      "Love2.mp3",
+      "Love3.mp3"
     ];
 
     // 頁面載入後，隨機挑選一首歌，但不自動播放
